// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composite with keyed children 1`] = `
[
  [
    "createNode",
    1071548371,
    "const",
  ],
  [
    "setProperty",
    1071548371,
    "key",
    "g",
  ],
  [
    "setProperty",
    1071548371,
    "value",
    0,
  ],
  [
    "createNode",
    985951761,
    "add",
  ],
  [
    "appendChild",
    985951761,
    1071548371,
  ],
  [
    "createNode",
    1374919193,
    "root",
  ],
  [
    "setProperty",
    1374919193,
    "channel",
    0,
  ],
  [
    "appendChild",
    1374919193,
    985951761,
  ],
  [
    "activateRoots",
    [
      1374919193,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`composite with keyed children 2`] = `
[
  [
    "setProperty",
    1071548371,
    "value",
    1,
  ],
  [
    "activateRoots",
    [
      1374919193,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`distinguish by props 1`] = `
[
  [
    "createNode",
    1557538697,
    "const",
  ],
  [
    "setProperty",
    1557538697,
    "value",
    2,
  ],
  [
    "createNode",
    1616670699,
    "phasor",
  ],
  [
    "appendChild",
    1616670699,
    1557538697,
  ],
  [
    "createNode",
    1181055054,
    "const",
  ],
  [
    "setProperty",
    1181055054,
    "value",
    0.5,
  ],
  [
    "createNode",
    1049815855,
    "le",
  ],
  [
    "appendChild",
    1049815855,
    1616670699,
  ],
  [
    "appendChild",
    1049815855,
    1181055054,
  ],
  [
    "createNode",
    1089078935,
    "seq",
  ],
  [
    "setProperty",
    1089078935,
    "seq",
    [
      0,
      0,
      1,
    ],
  ],
  [
    "appendChild",
    1089078935,
    1049815855,
  ],
  [
    "createNode",
    1440666767,
    "sample",
  ],
  [
    "setProperty",
    1440666767,
    "path",
    "test/path.wav",
  ],
  [
    "appendChild",
    1440666767,
    1089078935,
  ],
  [
    "createNode",
    1840069255,
    "root",
  ],
  [
    "setProperty",
    1840069255,
    "channel",
    0,
  ],
  [
    "appendChild",
    1840069255,
    1440666767,
  ],
  [
    "createNode",
    493667567,
    "seq",
  ],
  [
    "setProperty",
    493667567,
    "seq",
    [
      0,
      1,
      0,
    ],
  ],
  [
    "appendChild",
    493667567,
    1049815855,
  ],
  [
    "createNode",
    1741781271,
    "sample",
  ],
  [
    "setProperty",
    1741781271,
    "path",
    "test/path.wav",
  ],
  [
    "appendChild",
    1741781271,
    493667567,
  ],
  [
    "createNode",
    383156298,
    "root",
  ],
  [
    "setProperty",
    383156298,
    "channel",
    1,
  ],
  [
    "appendChild",
    383156298,
    1741781271,
  ],
  [
    "activateRoots",
    [
      1840069255,
      383156298,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`distinguished subtrees by key 1`] = `
[
  [
    "createNode",
    1097289128,
    "const",
  ],
  [
    "setProperty",
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    "createNode",
    1427558172,
    "const",
  ],
  [
    "setProperty",
    1427558172,
    "key",
    "fq1",
  ],
  [
    "setProperty",
    1427558172,
    "value",
    440,
  ],
  [
    "createNode",
    453812052,
    "phasor",
  ],
  [
    "appendChild",
    453812052,
    1427558172,
  ],
  [
    "createNode",
    453550641,
    "mul",
  ],
  [
    "appendChild",
    453550641,
    1097289128,
  ],
  [
    "appendChild",
    453550641,
    453812052,
  ],
  [
    "createNode",
    1074324112,
    "sin",
  ],
  [
    "appendChild",
    1074324112,
    453550641,
  ],
  [
    "createNode",
    1193164375,
    "const",
  ],
  [
    "setProperty",
    1193164375,
    "key",
    "fq2",
  ],
  [
    "setProperty",
    1193164375,
    "value",
    440,
  ],
  [
    "createNode",
    197128117,
    "phasor",
  ],
  [
    "appendChild",
    197128117,
    1193164375,
  ],
  [
    "createNode",
    364394878,
    "mul",
  ],
  [
    "appendChild",
    364394878,
    1097289128,
  ],
  [
    "appendChild",
    364394878,
    197128117,
  ],
  [
    "createNode",
    787548653,
    "sin",
  ],
  [
    "appendChild",
    787548653,
    364394878,
  ],
  [
    "createNode",
    555467758,
    "const",
  ],
  [
    "setProperty",
    555467758,
    "key",
    "fq3",
  ],
  [
    "setProperty",
    555467758,
    "value",
    440,
  ],
  [
    "createNode",
    1492179306,
    "phasor",
  ],
  [
    "appendChild",
    1492179306,
    555467758,
  ],
  [
    "createNode",
    220712335,
    "mul",
  ],
  [
    "appendChild",
    220712335,
    1097289128,
  ],
  [
    "appendChild",
    220712335,
    1492179306,
  ],
  [
    "createNode",
    1512310154,
    "sin",
  ],
  [
    "appendChild",
    1512310154,
    220712335,
  ],
  [
    "createNode",
    1661951969,
    "const",
  ],
  [
    "setProperty",
    1661951969,
    "key",
    "fq4",
  ],
  [
    "setProperty",
    1661951969,
    "value",
    440,
  ],
  [
    "createNode",
    79046899,
    "phasor",
  ],
  [
    "appendChild",
    79046899,
    1661951969,
  ],
  [
    "createNode",
    1376555748,
    "mul",
  ],
  [
    "appendChild",
    1376555748,
    1097289128,
  ],
  [
    "appendChild",
    1376555748,
    79046899,
  ],
  [
    "createNode",
    866439039,
    "sin",
  ],
  [
    "appendChild",
    866439039,
    1376555748,
  ],
  [
    "createNode",
    1808164672,
    "add",
  ],
  [
    "appendChild",
    1808164672,
    1074324112,
  ],
  [
    "appendChild",
    1808164672,
    787548653,
  ],
  [
    "appendChild",
    1808164672,
    1512310154,
  ],
  [
    "appendChild",
    1808164672,
    866439039,
  ],
  [
    "createNode",
    19209078,
    "root",
  ],
  [
    "setProperty",
    19209078,
    "channel",
    0,
  ],
  [
    "appendChild",
    19209078,
    1808164672,
  ],
  [
    "activateRoots",
    [
      19209078,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`garbage collection 1`] = `
[
  [
    "createNode",
    1511449914,
    "cos",
  ],
  [
    "appendChild",
    1511449914,
    1913760094,
  ],
  [
    "createNode",
    1305352856,
    "root",
  ],
  [
    "setProperty",
    1305352856,
    "channel",
    0,
  ],
  [
    "appendChild",
    1305352856,
    1511449914,
  ],
  [
    "activateRoots",
    [
      1305352856,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`garbage collection 2`] = `
[
  [
    "deleteNode",
    520300429,
  ],
  [
    "deleteNode",
    1423955117,
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`multi-channel basics 1`] = `
[
  [
    "createNode",
    1097289128,
    "const",
  ],
  [
    "setProperty",
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    "createNode",
    1709345783,
    "const",
  ],
  [
    "setProperty",
    1709345783,
    "key",
    "fq",
  ],
  [
    "setProperty",
    1709345783,
    "value",
    440,
  ],
  [
    "createNode",
    1952747413,
    "phasor",
  ],
  [
    "appendChild",
    1952747413,
    1709345783,
  ],
  [
    "createNode",
    1689717726,
    "mul",
  ],
  [
    "appendChild",
    1689717726,
    1097289128,
  ],
  [
    "appendChild",
    1689717726,
    1952747413,
  ],
  [
    "createNode",
    872803085,
    "sin",
  ],
  [
    "appendChild",
    872803085,
    1689717726,
  ],
  [
    "createNode",
    805437229,
    "root",
  ],
  [
    "setProperty",
    805437229,
    "channel",
    0,
  ],
  [
    "appendChild",
    805437229,
    872803085,
  ],
  [
    "createNode",
    1850081212,
    "root",
  ],
  [
    "setProperty",
    1850081212,
    "channel",
    1,
  ],
  [
    "appendChild",
    1850081212,
    872803085,
  ],
  [
    "activateRoots",
    [
      805437229,
      1850081212,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`numeric literals 1`] = `
[
  [
    "createNode",
    1097289128,
    "const",
  ],
  [
    "setProperty",
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    "createNode",
    198353271,
    "const",
  ],
  [
    "setProperty",
    198353271,
    "value",
    440,
  ],
  [
    "createNode",
    1406216981,
    "phasor",
  ],
  [
    "appendChild",
    1406216981,
    198353271,
  ],
  [
    "createNode",
    1913760094,
    "mul",
  ],
  [
    "appendChild",
    1913760094,
    1097289128,
  ],
  [
    "appendChild",
    1913760094,
    1406216981,
  ],
  [
    "createNode",
    520300429,
    "sin",
  ],
  [
    "appendChild",
    520300429,
    1913760094,
  ],
  [
    "createNode",
    1423955117,
    "root",
  ],
  [
    "setProperty",
    1423955117,
    "channel",
    0,
  ],
  [
    "appendChild",
    1423955117,
    520300429,
  ],
  [
    "activateRoots",
    [
      1423955117,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`simple sharing 1`] = `
[
  [
    "createNode",
    23247763,
    "tanh",
  ],
  [
    "appendChild",
    23247763,
    872803085,
  ],
  [
    "createNode",
    188983667,
    "root",
  ],
  [
    "setProperty",
    188983667,
    "channel",
    0,
  ],
  [
    "appendChild",
    188983667,
    23247763,
  ],
  [
    "activateRoots",
    [
      188983667,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`structural equality with value change 1`] = `
[
  [
    "setProperty",
    1427558172,
    "value",
    441,
  ],
  [
    "activateRoots",
    [
      19209078,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`switch and switch back 1`] = `
[
  [
    "activateRoots",
    [
      70054491,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;

exports[`the basics 1`] = `
[
  [
    "createNode",
    1097289128,
    "const",
  ],
  [
    "setProperty",
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    "createNode",
    1709345783,
    "const",
  ],
  [
    "setProperty",
    1709345783,
    "key",
    "fq",
  ],
  [
    "setProperty",
    1709345783,
    "value",
    440,
  ],
  [
    "createNode",
    1952747413,
    "phasor",
  ],
  [
    "appendChild",
    1952747413,
    1709345783,
  ],
  [
    "createNode",
    1689717726,
    "mul",
  ],
  [
    "appendChild",
    1689717726,
    1097289128,
  ],
  [
    "appendChild",
    1689717726,
    1952747413,
  ],
  [
    "createNode",
    872803085,
    "sin",
  ],
  [
    "appendChild",
    872803085,
    1689717726,
  ],
  [
    "createNode",
    805437229,
    "root",
  ],
  [
    "setProperty",
    805437229,
    "channel",
    0,
  ],
  [
    "appendChild",
    805437229,
    872803085,
  ],
  [
    "activateRoots",
    [
      805437229,
    ],
  ],
  [
    "commitUpdates",
  ],
]
`;
